--- a/styles.css
+++ b/styles.css
@@ -9,31 +9,271 @@
     --azul:rgba(1,175,235,1);
     --gris:rgba(28,28,28,.9);
     --blanco:#ffff;
+    --cyan: #00ffff;
+    --magenta: #ff00ff;
+    --yellow: #ffff00;
 }
 @font-face {
     font-family: Futura;
     src: url(fonts/Futura.ttc);
 }
 
+/*=============== MEDIA QUERYS ===================*/
+
+/*PANTALLA CON MAS DE 1680 A 2000PX - 4K*/
+/*LAPTOPS CON HD */
+@media only screen and (min-width: 1681px) and (max-width: 2048px){
 /*============DIV====================*/
+    .div-xl-6, .div-xl-4, .div-xl-3, .div-xl-12, .div-xl-8, .div-xl-2, .div-xlp-3{
+        float: left;
+        margin-right: 1%;
+        margin-bottom: 10px;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        position: relative;
+    }
 
-
-.div-xl-6, .div-xl-4, .div-xl-3, .div-xl-12, .div-xl-8, .div-xl-2{
-    float: left;
-    margin-right: 1%;
-    margin-bottom: 10px;
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    position: relative;
+    .div-xl-2{ width: 15.666666666667%; }
+    .div-xl-3{ width: 24%; }
+    .div-xlp-3{ width: 25%; }
+    .div-xl-4{ width: 32.3333333%; }
+    .div-xl-6{ width: 49%; }
+    .div-xl-8{ width: 65.666666666667%; }
+    .div-xl-12{ width: 99%; }
 }
 
-.div-xl-2{ width: 15.666666666667%; }
-.div-xl-3{ width: 24%; }
-.div-xl-4{ width: 32.3333333%; }
-.div-xl-6{ width: 49%; }
-.div-xl-8{ width: 65.666666666667%; }
-.div-xl-12{ width: 99%; }
+/*LAPTOPS CON HD */
+@media only screen and (min-width: 1025px) and (max-width: 1680px){
+/*============DIV====================*/
+    .div-lg-6, .div-lg-2, .div-lg-8, .div-lg-4, .div-lg-3, .div-lg-12, .div-lgp-3{
+        float: left;
+        margin-right: 1%;
+        margin-bottom: 10px;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        position: relative;
+    }
+    .div-lg-2{ width: 15.666666666667%; }
+    .div-lg-3{ width: 24%; }
+    .div-lgp-3{ width: 25%; }
+    .div-lg-4{ width: 32.3333333%; }
+    .div-lg-6{ width: 49%; }
+    .div-lg-8{ width: 65.666666666667%; }
+    .div-lg-12{ width: 99%; }
+
+
+    .imgmuestra{
+        height: 255px !important;
+    }
+
+    #reds{
+        width: 2em !important;
+    }
+
+}
+
+/*DISPOSITIVOS TABLETS*/
+@media only screen and (min-width: 768px) and (max-width: 1024px){
+    /*============DIV====================*/
+    .div-md-6, .div-md-2, .div-md-8, .div-md-4, .div-md-3, .div-md-12, .div-md-1, .div-md-10, .div-mdp-6{
+        float: left;
+        margin-right: 1%;
+        margin-bottom: 10px;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        position: relative;
+    }
+    .div-md-1{ width: 7.333333333333%; }
+    .div-md-2{ width: 15.666666666667%; }
+    .div-md-3{ width: 24%; }
+    .div-md-4{ width: 32.3333333%; }
+    .div-md-6{ width: 49%; }
+    .div-mdp-6{ width: 49%; }
+    .div-md-8{ width: 65.666666666667%; }
+    .div-md-10{ width: 82.33333333333%; }
+    .div-md-12{ width: 99%; }
+
+    #icons{
+        width: 5em !important;
+        height: 4em!important;
+    }
+
+
+    .imgmuestra{
+        height: 255px !important;
+    }
+
+    #reds{
+        width: 2em !important;
+    }
+
+    #imgc{
+        width: 1em !important;
+        height: 1em !important;
+    }
+
+    .tmodal{    
+        margin-left: 38% !important;
+    /*background: green;*/
+    }
+    .cmodal{
+        margin-top: 35% !important;
+    /*background: blue;*/
+    }
+}
+   
+/*DISPOSITIVOS SMARTPHONE width and Tablet*/
+@media only screen and (min-width: 480px) and (max-width: 767px){
+    /*============DIV====================*/
+    .div-sm-6, .div-sm-2, .div-sm-8, .div-sm-4, .div-md-3, .div-sm-12, .div-sm-1, .div-sm-10, .div-smp-6{
+        float: left;
+        margin-right: 1%;
+        margin-bottom: 10px;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        position: relative;
+    }
+    .div-sm-1{ width: 7.333333333333%; }
+    .div-sm-2{ width: 15.666666666667%; }
+    .div-md-3{ width: 24%; }
+    .div-sm-4{ width: 32.3333333%; }
+    .div-sm-6{ width: 49%; }
+    .div-smp-6{ width: 49%; }
+    .div-sm-8{ width: 65.666666666667%; }
+    .div-sm-10{ width: 82.33333333333%; }
+    .div-sm-12{ width: 99%; }
+
+    #logo{
+        width: 5em !important;
+        height: 4em !important;
+    }
+
+    #redes{
+        width: 1.6em !important;
+        height: 1em !important;
+        margin-top: 18% !important;
+    }
+
+    #icons{
+        width: 2em !important;
+        height: 1.5em!important;
+    }
+
+
+    .imgmuestra{
+        height: 175px !important;
+    }
+
+    #reds{
+        width: 2em !important;
+    }
+
+    #imgc{
+        width: 1em !important;
+        height: 1em !important;
+    }
+
+    .tmodal{    
+        margin-left: 35% !important;
+    /*background: green;*/
+    }
+    .cmodal{
+        margin-top: -2% !important;
+    /*background: blue;*/
+    }
+    #map {
+        width: 99% !important;
+        height: 85% !important;
+        top: 0% !important;
+        left: .5% !important;
+    }
+}
+
+/*DISPOSITIVOS SMARTPHONE*/
+@media only screen and (min-width: 0px) and (max-width: 479px){
+    /*============DIV====================*/
+    .div-xs-6, .div-xs-2, .div-xs-8, .div-xs-4, .div-xs-3, .div-xs-12, .div-xs-1, .div-xs-10, .div-xsp-6{
+        float: left;
+        margin-right: 1%;
+        margin-bottom: 10px;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        position: relative;
+    }
+    .div-xs-1{ width: 7.333333333333%; }
+    .div-xs-2{ width: 15.666666666667%; }
+    .div-xs-3{ width: 24%; }
+    .div-xs-4{ width: 32.3333333%; }
+    .div-xs-6{ width: 49%; }
+    .div-xsp-6{ width: 49%; }
+    .div-xs-8{ width: 65.666666666667%; }
+    .div-xs-10{ width: 82.33333333333%; }
+    .div-xs-12{ width: 99%; }
+
+    #logo{
+        width: 5em !important;
+        height: 4em !important;
+    }
+
+    #redes{
+        width: 1.6em !important;
+        height: 1em !important;
+        margin-top: 18% !important;
+    }
+
+    #icons{
+        width: 2em !important;
+        height: 1.5em!important;
+    }
+
+
+    .imgmuestra{
+        height: 175px !important;
+    }
+
+    #reds{
+        width: 2em !important;
+    }
+
+    #imgc{
+        width: 1em !important;
+        height: 1em !important;
+    }
+
+    .tmodal{    
+        margin-left: 20% !important;
+    /*background: green;*/
+    }
+    .cmodal{
+        margin-top: 10% !important;
+    /*background: blue;*/
+    }
+    #map {
+        width: 99% !important;
+        height: 85% !important;
+        top: 0% !important;
+        left: .5% !important;
+    }
+    #imgus{
+        height: 165px !important;
+    }
+    .secciones{
+        font-size: .7em;
+    }
+}
+
+
+
+
+
+/*============= FIN DE MEDIAS QUERYS =================*/
+
+
 
 /*======= BASICA =======*/
 
@@ -51,12 +291,31 @@
     position: relative;
     float: left;
     background: var(--base);
+    -webkit-animation: random 7s infinite;
+    animation: random 10s infinite;
+}
+@keyframes  random {
+    25% { background-color: var(--cyan); } 
+    50% { background-color: var(--yellow); } 
+    75% { background-color: var(--magenta); }  
 }
 #logo{
     width: 13em;
-    height: 9em;
+    height: 8em;
+    margin-top: 2%;
 }
 #icons{
+    width: 3em;
+    height: 2em;
+    -webkit-animation: randomi 7s infinite;
+    animation: randomi 10s infinite;
+}
+@keyframes  randomi {
+    25% { filter:invert(0%); } 
+    50% { filter:invert(100%); } 
+    75% { filter:invert(0%); } 
+}
+#reds{
     width: 3em;
     height: 2em;
 }
@@ -75,7 +334,7 @@
     background: var(--base);
 }
 #redes{
-    width: 3em;
+    width: 2em;
     height: 2em;
     margin-top: 22%;
     position: relative;
@@ -87,6 +346,7 @@
     height: 85%;
     position: relative;
     float: left;
+    overflow-y: auto;
 }
 /*============= MODAL =============*/
 #bg-negro {
@@ -202,6 +462,10 @@
     margin-bottom: 0;
 }
 
+.imgmuestra:hover{
+    background: blueviolet;
+}
+
 
 /*============= NOSOTROS =========*/
 .text{
@@ -210,6 +474,12 @@
     height: 100%;
     position: relative;
     float: left;
+    overflow-y: auto;
+}
+
+#imgus{
+    width: 100%;
+    height: 460px;
 }
 
 /*============= SERVICIO =========*/
