--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,29 @@
-*{
+* {
     padding: 0;
-    margin:0;
-    font-family: Futura;
+    margin: 0;
+    font-family: HelveNeu;
     color: var(--blanco);
 }
-:root{
-    --base:rgba(0,0,0,1);
-    --azul:rgba(1,175,235,1);
-    --gris:rgba(28,28,28,.9);
-    --blanco:#ffff;
-    --cyan: #00ffff;
-    --magenta: #ff00ff;
-    --yellow: #ffff00;
+
+:root {
+    --base: rgba(0, 0, 0, .7);
+    --azul: rgba(1, 175, 235, 1);
+    --gris: rgba(0, 0, 0, .8);
+    --blanco: #ffff;
 }
+
 @font-face {
-    font-family: Futura;
-    src: url(fonts/Futura.ttc);
+    font-family: HelveNeu;
+    src: url(fonts/HelveticaNeue.ttc);
 }
 
 /*=============== MEDIA QUERYS ===================*/
 
-/*PANTALLA CON MAS DE 1680 A 2000PX - 4K*/
-/*LAPTOPS CON HD */
-@media only screen and (min-width: 1681px) and (max-width: 2048px){
-/*============DIV====================*/
-    .div-xl-6, .div-xl-4, .div-xl-3, .div-xl-12, .div-xl-8, .div-xl-2, .div-xlp-3{
+    /*PANTALLA CON MAS DE 1680 A 2000PX - 4K*/
+    /*LAPTOPS CON HD */
+@media only screen and (min-width: 1681px) and (max-width: 2048px) {
+    /*============DIV====================*/
+    .div-xl-6, .div-xl-4, .div-xl-3, .div-xl-12, .div-xl-8, .div-xl-2, .div-xlp-3 {
         float: left;
         margin-right: 1%;
         margin-bottom: 10px;
@@ -33,20 +32,23 @@
         justify-content: center;
         position: relative;
     }
-
-    .div-xl-2{ width: 15.666666666667%; }
-    .div-xl-3{ width: 24%; }
-    .div-xlp-3{ width: 25%; }
-    .div-xl-4{ width: 32.3333333%; }
-    .div-xl-6{ width: 49%; }
-    .div-xl-8{ width: 65.666666666667%; }
-    .div-xl-12{ width: 99%; }
+    .div-xl-2 { width: 15.666666666667%; }
+    .div-xl-3 { width: 24%; }
+    .div-xlp-3 { width: 25%; }
+    .div-xl-4 { width: 32.3333333%; }
+    .div-xl-6 { width: 49%; }
+    .div-xl-8 { width: 65.666666666667%; }
+    .div-xl-12 { width: 99%; }
+    #logo {
+        width: 13em;
+        height: 8em;
+    }
 }
 
 /*LAPTOPS CON HD */
-@media only screen and (min-width: 1025px) and (max-width: 1680px){
-/*============DIV====================*/
-    .div-lg-6, .div-lg-2, .div-lg-8, .div-lg-4, .div-lg-3, .div-lg-12, .div-lgp-3{
+@media only screen and (min-width: 1025px) and (max-width: 1680px) {
+   /*============DIV====================*/
+    .div-lg-6, .div-lg-2, .div-lg-8, .div-lg-4, .div-lg-3, .div-lg-12, .div-lgp-3 {
         float: left;
         margin-right: 1%;
         margin-bottom: 10px;
@@ -55,29 +57,29 @@
         justify-content: center;
         position: relative;
     }
-    .div-lg-2{ width: 15.666666666667%; }
-    .div-lg-3{ width: 24%; }
-    .div-lgp-3{ width: 25%; }
-    .div-lg-4{ width: 32.3333333%; }
-    .div-lg-6{ width: 49%; }
-    .div-lg-8{ width: 65.666666666667%; }
-    .div-lg-12{ width: 99%; }
 
+    .div-lg-2 { width: 15.666666666667%; }
+    .div-lg-3 { width: 24%; }
+    .div-lgp-3 {  width: 25%; }
+    .div-lg-4 { width: 32.3333333%; }
+    .div-lg-6 { width: 49%; }
+    .div-lg-8 { width: 65.666666666667%; }
+    .div-lg-12 { width: 99%; }
 
-    .imgmuestra{
-        height: 255px !important;
+    #logo{ 
+        width: 11em;
+        height: 7em;
+        margin-top: 2%;
     }
 
-    #reds{
-        width: 2em !important;
-    }
-
+    .imgmuestra { height: 255px !important; }
+    #reds { width: 2em !important; }
 }
 
 /*DISPOSITIVOS TABLETS*/
-@media only screen and (min-width: 768px) and (max-width: 1024px){
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
     /*============DIV====================*/
-    .div-md-6, .div-md-2, .div-md-8, .div-md-4, .div-md-3, .div-md-12, .div-md-1, .div-md-10, .div-mdp-6{
+    .div-md-6, .div-md-2, .div-md-8, .div-md-4, .div-md-3, .div-md-12, .div-md-1, .div-md-10, .div-mdp-6 {
         float: left;
         margin-right: 1%;
         margin-bottom: 10px;
@@ -86,49 +88,35 @@
         justify-content: center;
         position: relative;
     }
-    .div-md-1{ width: 7.333333333333%; }
-    .div-md-2{ width: 15.666666666667%; }
-    .div-md-3{ width: 24%; }
-    .div-md-4{ width: 32.3333333%; }
-    .div-md-6{ width: 49%; }
-    .div-mdp-6{ width: 49%; }
-    .div-md-8{ width: 65.666666666667%; }
-    .div-md-10{ width: 82.33333333333%; }
-    .div-md-12{ width: 99%; }
-
-    #icons{
-        width: 5em !important;
-        height: 4em!important;
+    .div-md-1 { width: 7.333333333333%; }
+    .div-md-2 { width: 15.666666666667%; }
+    .div-md-3 { width: 24%; }
+    .div-md-4 { width: 32.3333333%; }
+    .div-md-6 { width: 49%; }
+    .div-mdp-6 { width: 49%; }
+    .div-md-8 { width: 65.666666666667%; }
+    .div-md-10 { width: 82.33333333333%; }
+    .div-md-12 { width: 99%; }
+    #logo { 
+        width: 8em !important; 
+        height: 5em !important; 
+        margin-top: 3%;
     }
-
-
-    .imgmuestra{
-        height: 255px !important;
-    }
-
-    #reds{
-        width: 2em !important;
-    }
-
-    #imgc{
-        width: 1em !important;
-        height: 1em !important;
-    }
-
-    .tmodal{    
-        margin-left: 38% !important;
-    /*background: green;*/
-    }
-    .cmodal{
-        margin-top: 35% !important;
-    /*background: blue;*/
-    }
+    #icons { width: 5em !important; height: 4em !important; }
+    .imgmuestra { height: 255px !important; }
+    #reds { width: 2em !important; }
+    #imgc { width: 1em !important; height: 1em !important; }
+    .tmodal { margin-left: 38% !important; }
+    .cmodal { margin-top: 15% !important; }
+    .header { height: 80px !important; }
+    .body2{ height: 90% !important;}
+    .body{ height: 85% !important;}
 }
-   
+
 /*DISPOSITIVOS SMARTPHONE width and Tablet*/
-@media only screen and (min-width: 480px) and (max-width: 767px){
+@media only screen and (min-width: 480px) and (max-width: 767px) {
     /*============DIV====================*/
-    .div-sm-6, .div-sm-2, .div-sm-8, .div-sm-4, .div-md-3, .div-sm-12, .div-sm-1, .div-sm-10, .div-smp-6{
+    .div-sm-6, .div-sm-2, .div-sm-8, .div-sm-4, .div-md-3, .div-sm-12, .div-sm-1, .div-sm-10, .div-smp-6 {
         float: left;
         margin-right: 1%;
         margin-bottom: 10px;
@@ -137,66 +125,57 @@
         justify-content: center;
         position: relative;
     }
-    .div-sm-1{ width: 7.333333333333%; }
-    .div-sm-2{ width: 15.666666666667%; }
-    .div-md-3{ width: 24%; }
-    .div-sm-4{ width: 32.3333333%; }
-    .div-sm-6{ width: 49%; }
-    .div-smp-6{ width: 49%; }
-    .div-sm-8{ width: 65.666666666667%; }
-    .div-sm-10{ width: 82.33333333333%; }
-    .div-sm-12{ width: 99%; }
-
-    #logo{
-        width: 5em !important;
-        height: 4em !important;
+    .div-sm-1 { width: 7.333333333333%; }
+    .div-sm-2 { width: 15.666666666667%; }
+    .div-md-3 { width: 24%; }
+    .div-sm-4 { width: 32.3333333%; }
+    .div-sm-6 { width: 49%; }
+    .div-smp-6 { width: 49%; }
+    .div-sm-8 { width: 65.666666666667%; }
+    .div-sm-10 { width: 82.33333333333%; }
+    .div-sm-12 { width: 99%; }
+    #logo { 
+        width: 7em !important; 
+        height: 5em !important; 
+        margin-top: 2%;
     }
-
-    #redes{
-        width: 1.6em !important;
-        height: 1em !important;
-        margin-top: 18% !important;
+    #redes { 
+            width: 1.6em !important;
+            height: 1em !important;
+            margin-top: 18% !important;
     }
-
-    #icons{
-        width: 2em !important;
-        height: 1.5em!important;
-    }
-
-
-    .imgmuestra{
-        height: 175px !important;
-    }
-
-    #reds{
-        width: 2em !important;
-    }
-
-    #imgc{
+    #icons {  width: 2em !important;  height: 1.5em !important; }
+    .imgmuestra { height: 175px !important; }
+    #reds { width: 2em !important; }
+    #imgc {
         width: 1em !important;
         height: 1em !important;
     }
-
-    .tmodal{    
-        margin-left: 35% !important;
-    /*background: green;*/
-    }
-    .cmodal{
-        margin-top: -2% !important;
-    /*background: blue;*/
-    }
-    #map {
+   .tmodal { margin-left: 35% !important; }
+   .cmodal { margin-top: 0% !important; }
+    #map { 
         width: 99% !important;
         height: 85% !important;
         top: 0% !important;
         left: .5% !important;
     }
+    .header { height: 78px !important; }
+    .body2{ height: 90% !important;}
+    .body { height: 85% !important; }
+    #clientes{ 
+        width: 50% !important;
+        height: 65%;
+        margin-top: 5%;
+        margin-left: 25%;
+    }
+    .secciones { font-size: .9em; }
+    h3{ font-size: .9em; }
 }
 
-/*DISPOSITIVOS SMARTPHONE*/
-@media only screen and (min-width: 0px) and (max-width: 479px){
+    /*DISPOSITIVOS SMARTPHONE*/
+@media only screen and (min-width: 0px) and (max-width: 479px) {
     /*============DIV====================*/
-    .div-xs-6, .div-xs-2, .div-xs-8, .div-xs-4, .div-xs-3, .div-xs-12, .div-xs-1, .div-xs-10, .div-xsp-6{
+    .div-xs-6, .div-xs-2, .div-xs-8, .div-xs-4, .div-xs-3, .div-xs-12, .div-xs-1, .div-xs-10, .div-xsp-6 {
         float: left;
         margin-right: 1%;
         margin-bottom: 10px;
@@ -205,79 +184,70 @@
         justify-content: center;
         position: relative;
     }
-    .div-xs-1{ width: 7.333333333333%; }
-    .div-xs-2{ width: 15.666666666667%; }
-    .div-xs-3{ width: 24%; }
-    .div-xs-4{ width: 32.3333333%; }
-    .div-xs-6{ width: 49%; }
-    .div-xsp-6{ width: 49%; }
-    .div-xs-8{ width: 65.666666666667%; }
-    .div-xs-10{ width: 82.33333333333%; }
-    .div-xs-12{ width: 99%; }
 
-    #logo{
-        width: 5em !important;
-        height: 4em !important;
-    }
+    .div-xs-1 { width: 7.333333333333%; }
+    .div-xs-2 { width: 15.666666666667%; }
+    .div-xs-3 { width: 24%; }
+    .div-xs-4 { width: 32.3333333%; }
+    .div-xs-6 { width: 49%; }
+    .div-xsp-6 { width: 49%; }
+    .div-xs-8 { width: 65.666666666667%; }
+    .div-xs-10 { width: 82.33333333333%; }
+    .div-xs-12 { width: 99%; }
 
-    #redes{
+    #logo { width: 5em !important; height: 3em !important; cursor: pointer; }
+    #redes {
         width: 1.6em !important;
         height: 1em !important;
         margin-top: 18% !important;
     }
 
-    #icons{
-        width: 2em !important;
-        height: 1.5em!important;
-    }
-
-
-    .imgmuestra{
-        height: 175px !important;
-    }
-
-    #reds{
-        width: 2em !important;
-    }
-
-    #imgc{
-        width: 1em !important;
-        height: 1em !important;
-    }
-
-    .tmodal{    
-        margin-left: 20% !important;
-    /*background: green;*/
-    }
-    .cmodal{
-        margin-top: 10% !important;
-    /*background: blue;*/
-    }
+    #icons { width: 2em !important; height: 1.5em !important; }
+    .imgmuestra { height: 175px !important; }
+    #reds { width: 2em !important; }
+    #imgc { width: 1em !important; height: 1em !important; }
+    .tmodal { margin-left: 20% !important; }
+    .cmodal { margin-top: 10% !important; }
     #map {
         width: 99% !important;
         height: 85% !important;
         top: 0% !important;
         left: .5% !important;
     }
-    #imgus{
-        height: 165px !important;
+    #imgus { height: 165px !important; }
+    .secciones { font-size: .5em; }
+    .header { height: 10% !important; }
+    .body2{ height: 90% !important;}
+    .body { height: 85% !important; }
+    #clientes{ 
+        width: 95% !important;
+        height: 90%;
+        margin-top: 12%;
+        margin-left: 2%;
     }
-    .secciones{
-        font-size: .7em;
+    #galery {
+        margin-left: 2% !important;
     }
+    h3{ font-size: .9em; }
 }
-
-
-
-
 
 /*============= FIN DE MEDIAS QUERYS =================*/
 
 
+span { font-size: 1.2em; font-weight: 2000; cursor: pointer;}
+#slc1, #slc2, #slc3, #slc4, #slc5, #slc6, #slc7 { margin-top: 1.5%; }
+#slc1 { border-bottom: 3px solid #00ffff; } 
+#slc3 { border-bottom: 3px solid #ff00ff; }
+#slc4 { border-bottom: 3px solid #ffff00; }
+#slc2 { border-bottom: 3px solid #00ffff; }
+#slc5 { border-bottom: 3px solid #ff00ff; }
+#slc6 { border-bottom: 3px solid #ffff00; }
+#slc7 { border-bottom: 3px solid #00ffff; }
+
+
 
 /*======= BASICA =======*/
-
-.bg{
+.bg {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -285,69 +255,59 @@
     background: var(--gris);
 }
 
-.header{
+.header {
     width: 100%;
     height: 15%;
     position: relative;
     float: left;
     background: var(--base);
-    -webkit-animation: random 7s infinite;
-    animation: random 10s infinite;
-}
-@keyframes  random {
-    25% { background-color: var(--cyan); } 
-    50% { background-color: var(--yellow); } 
-    75% { background-color: var(--magenta); }  
-}
-#logo{
-    width: 13em;
-    height: 8em;
-    margin-top: 2%;
-}
-#icons{
-    width: 3em;
-    height: 2em;
-    -webkit-animation: randomi 7s infinite;
-    animation: randomi 10s infinite;
-}
-@keyframes  randomi {
-    25% { filter:invert(0%); } 
-    50% { filter:invert(100%); } 
-    75% { filter:invert(0%); } 
-}
-#reds{
-    width: 3em;
-    height: 2em;
 }
 
-.extra{
+.body2 {
+    width: 100%;
+    height: 85%;
+    position: relative;
+    float: left;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+
+
+#icons {
+    width: 3em;
+    height: 2em;
+    filter: invert(100%);
+}
+#reds { width: 3em; height: 2em; filter: invert(100%);}
+#redes {
+    width: 2em;
+    height: 2em;
+    margin-top: 22%;
+    position: relative;
+    float: left;
+    filter: invert(100%);
+}
+
+.extra {
     display: flex;
     justify-content: flex-end;
     margin-top: 3%;
 }
 
-.footer{
+.footer {
     width: 100%;
     height: 5%;
     position: relative;
     float: left;
     background: var(--base);
 }
-#redes{
-    width: 2em;
-    height: 2em;
-    margin-top: 22%;
-    position: relative;
-    float: left;
-}
 
-.body2{
-    width: 100%;
-    height: 85%;
-    position: relative;
-    float: left;
-    overflow-y: auto;
-}
+h3{ margin-top: -15px !important; }
+
+
+    
+
 /*============= MODAL =============*/
 #bg-negro {
     width: 100%;
@@ -365,8 +325,8 @@
 #modal {
     float: left;
     position: fixed;
-    background: rgba(211,46,98,.7);
-    z-index: 999999999999;
+        background:rgba(0, 0, 0, .7);
+     z-index: 999999999999;
     border-radius: 2px;
     /*top: 50%;*/
     /*margin-top: -100px;*/
@@ -386,7 +346,7 @@
     text-align: center;
     font-size: 20px;
     font-weight: 400;
-    color: #34495e;
+    color: var(--blanco) !important;
     margin-top: 20px;
     margin-bottom: 20px;
 }
@@ -401,74 +361,140 @@
     text-align: center;
 }
 
-.chico {
-    width: 300px !important;
-    margin-left: -150px;
-}
-
+.chico { width: 300px !important; margin-left: -150px; }
 .verModal {
     visibility: visible !important;
     opacity: 1 !important;
     -webkit-transform: scale(1) !important;
 }
 
-.grande {
-    width: 100% !important;
-    height: 100%;
-}
-
-.cmodal{
-    margin-top: 10%;
-    /*background: blue;*/
-}
-
-.bmodal{
+.grande { width: 100% !important;  height: 100%; }
+.cmodal { margin-top: 10%; }
+.bmodal {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     background: transparent;
-    /*color: white;*/
     border-style: none;
 }
-.tmodal{    
-    margin-left: 45%;
-    /*background: green;*/
-}
-
-.title:hover{
-    background: white;
-    color: rgb(211,46,98)
-}
+.tmodal { margin-left: 45%; }
+.title:hover { background: white; color: rgb(211, 46, 98) }
 
 
 /*============= INDEX =========*/
-.body{
+.body {
     width: 100%;
     height: 80%;
     position: relative;
     float: left;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
-.imgmuestra{
+.imgmuestra {
     width: 100%;
     height: 305px;
     position: relative;
     float: left;
 }
 
-.outmarg{
-    margin-right:0;
+.outmarg {
+    margin-right: 0;
     margin-bottom: 0;
 }
 
-.imgmuestra:hover{
-    background: blueviolet;
+/* === EFECTO DE GRID IMAGENES === */
+/* ESTILO DE IMG */
+.fig img {
+    opacity: 1;
+    -webkit-transition: opacity 0.35s;
+    transition: opacity 0.35s;
+}
+
+/* ESTILO DE CONTENEDOR TEXTOS */
+.figcap {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 4em 3em;
+    color: var(--blanco);
+}
+/* ESTILO DE ETQ P */
+.figcap p {
+    margin: 0 0 5px;
+    opacity: 0;
+    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+    transition: opacity 0.35s, -webkit-transform 0.35s, -moz-transform 0.35s, -o-transform 0.35s, transform 0.35s;
+    color: var(--blanco);
+}
+/* ESTILO DE ETQ H3 */
+.figcap h3 {
+    opacity: 0;
+    text-transform: uppercase;
+    -webkit-transition-delay: 0.3s;
+    transition-delay: 0.3s;
+}
+
+/* ==== ESTILOS DE ETQ A ==== */
+.figcap a {
+    position: absolute;
+    opacity: 0;
+    color: var(--blanco);
+}
+
+/* ESTILO DE CONTENDOR CON LINEAS */
+.figcap::before {
+    position: absolute;
+    top: 10%;
+    right: 30px;
+    bottom: 50%;
+    left: 30px;
+    border-top: 1px solid rgba(0, 0, 0, 0.8);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.8);
+    content: '';
+    opacity: 0;
+    -webkit-transition: all 0.4s;
+    transition: all 0.4s;
+    -webkit-transition-delay: 0.6s;
+    transition-delay: 0.6s;
+}
+
+/* ========= HOVER =========== */
+/* IMG */
+.fig:hover img { opacity: 0.35; }
+
+/* ====hover de h3 ==== */
+.fig:hover .figcap h3 {
+    opacity: 1;
+    -webkit-transition-delay: 0.3s;
+    transition-delay: 0.3s;
+}
+
+.fig:hover .figcap p {
+    opacity: 0.9;
+    -webkit-transition-delay: 0.6s;
+    transition-delay: 0.6s;
+}
+
+.fig:hover .figcap a {
+    opacity: 0.9;
+    -webkit-transition-delay: 0.6s;
+    transition-delay: 0.6s;
+}
+
+/* es la forma que tiene las lineas, CONTENIDO*/
+.fig:hover .figcap::before {
+    background: rgba(255, 255, 255, 0);
+    top: 30px;
+    bottom: 30px;
+    opacity: 1;
+    -webkit-transition-delay: 0s;
+    transition-delay: 0s;
 }
 
 
 /*============= NOSOTROS =========*/
-.text{
+.text {
     background: var(--gris);
     width: 100%;
     height: 100%;
@@ -477,21 +503,19 @@
     overflow-y: auto;
 }
 
-#imgus{
-    width: 100%;
-    height: 460px;
-}
+#imgus { height: 460px; width: 100%; } 
 
 /*============= SERVICIO =========*/
-.selector{
-    float: left;
+.selector {
     background: var(--gris);
-    display: flex;
+    float: left;
     justify-content: center;
-    position: relative;
+    display: flex;
     width: 100%;
+    position: relative;
 }
-.informacion{
+
+.informacion {
     background: var(--gris);
     width: 100%;
     height: 100%;
@@ -500,34 +524,47 @@
     overflow-y: auto;
 }
 
-.qflex{
-    display:block;
+/* es parte de serv.php */
+.qflex {
+    display: none;    
+    opacity: 0;
+    margin-left: 80%;
+    -webkit-transition: 3s; /* For Safari 3.1 to 6.0 */
+    transition: 3s;
+}
+#galery {
+    display: block;
+    margin-left: 17.7%;
+    -webkit-transition: 3s; /* For Safari 3.1 to 6.0 */
+    transition: 3s;
+}
+.movgalery{
+    margin-left: 0% !important;
 }
 
-.otro{
-    overflow-y: auto;
+.movflex{
+    display: block;
+    margin-left: 0% !important;
 }
 
+.otro { overflow-y: auto; }
 
 /*============= CONTACT =========*/
-.dats{
-    margin-left: 5%;
-}
-#imgc{
-    width: 1.2em;
-    height: 1.2em;
-}
-#map{
+.dats { margin-left: 5%; }
+#imgc { width: 1.2em; height: 1.2em; filter: invert(100%);}
+#map { 
     width: 49%;
     height: 50%;
     position: relative;
     float: left;
     top: 9%;
 }
-#maps{
+.qflexx { display: block; }
+/* 
+#maps {
     width: 100%;
     height: 91%;
     position: absolute;
     float: left;
     top: 9%;
-}
+} */
