--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,8 @@
     }
 
     .imgmuestra { height: 255px !important; }
+    
+    .imgp{}
     #reds { width: 2em !important; }
 }
 
@@ -241,7 +243,9 @@
     #galery {
         margin-left: 2% !important;
     }
-    h3{ font-size: .9em; }
+    h3{ font-size: .7em; }
+    .figcap p{ font-size: .6em; }
+    .figcap a{ font-size: .6em; }
 }
 
 /*============= FIN DE MEDIAS QUERYS =================*/
@@ -422,7 +426,8 @@ h3{ margin-top: -15px !important; }
     width: 60%;
     margin-left: 18%;
 }
-.imgp2{ }
+.imgp2{ width: 60%;
+    margin-left: 7%;}
 
 .outmarg {
     margin-right: .5%;
